Set up CI with Azure Pipelines
[skip ci]

--- a/environment_setup/iac-remove-environment.yml
+++ b/environment_setup/iac-remove-environment.yml
@@ -11,10 +11,9 @@ variables:
 steps:
 - task: AzureResourceGroupDeployment@2
   inputs:
-    azureSubscription: 'AzureResourceConnection'
+    azureSubscription: 'adpsub1'
     action: 'DeleteRG'
     resourceGroupName: '$(RESOURCE_GROUP)'
-    location: $(LOCATION)
   displayName: 'Delete resources in Azure'
 
   
