Update azdo-ci-build-train.yml for Azure Pipelines

--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -195,7 +195,7 @@ stages:
       name: WebAppDeploy
       displayName: 'Azure Web App on Container Deploy'
       inputs:
-        azureSubscription: 'AzureResourceConnection'
+        azureSubscription: 'adpsub1'
         appName: '$(WEBAPP_DEPLOYMENT_NAME)'
         containers: '$(IMAGE_LOCATION)'
     - task: AzureCLI@1
